qt6/multimedia/gen_qcamera.nim


proc fcQCamera_new(): ptr cQCamera {.importc: "QCamera_new".}
proc fcQCamera_new2(cameraDevice: pointer): ptr cQCamera {.importc: "QCamera_new2".}
proc fcQCamera_new3(position: cint): ptr cQCamera {.importc: "QCamera_new3".}
proc fcQCamera_new4(parent: pointer): ptr cQCamera {.importc: "QCamera_new4".}
proc fcQCamera_new5(cameraDevice: pointer, parent: pointer): ptr cQCamera {.importc: "QCamera_new5".}
proc fcQCamera_new6(position: cint, parent: pointer): ptr cQCamera {.importc: "QCamera_new6".}
proc fcQCamera_metaObject(self: pointer, ): pointer {.importc: "QCamera_metaObject".}
proc fcQCamera_metacast(self: pointer, param1: cstring): pointer {.importc: "QCamera_metacast".}
proc fcQCamera_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QCamera_metacall".}
proc fcQCamera_tr(s: cstring): struct_miqt_string {.importc: "QCamera_tr".}
proc fcQCamera_isAvailable(self: pointer, ): bool {.importc: "QCamera_isAvailable".}
proc fcQCamera_isActive(self: pointer, ): bool {.importc: "QCamera_isActive".}
proc fcQCamera_captureSession(self: pointer, ): pointer {.importc: "QCamera_captureSession".}
proc fcQCamera_cameraDevice(self: pointer, ): pointer {.importc: "QCamera_cameraDevice".}
proc fcQCamera_setCameraDevice(self: pointer, cameraDevice: pointer): void {.importc: "QCamera_setCameraDevice".}
proc fcQCamera_cameraFormat(self: pointer, ): pointer {.importc: "QCamera_cameraFormat".}
proc fcQCamera_setCameraFormat(self: pointer, format: pointer): void {.importc: "QCamera_setCameraFormat".}
proc fcQCamera_error(self: pointer, ): cint {.importc: "QCamera_error".}
proc fcQCamera_errorString(self: pointer, ): struct_miqt_string {.importc: "QCamera_errorString".}
proc fcQCamera_supportedFeatures(self: pointer, ): cint {.importc: "QCamera_supportedFeatures".}
proc fcQCamera_focusMode(self: pointer, ): cint {.importc: "QCamera_focusMode".}
proc fcQCamera_setFocusMode(self: pointer, mode: cint): void {.importc: "QCamera_setFocusMode".}
proc fcQCamera_isFocusModeSupported(self: pointer, mode: cint): bool {.importc: "QCamera_isFocusModeSupported".}
proc fcQCamera_focusPoint(self: pointer, ): pointer {.importc: "QCamera_focusPoint".}
proc fcQCamera_customFocusPoint(self: pointer, ): pointer {.importc: "QCamera_customFocusPoint".}
proc fcQCamera_setCustomFocusPoint(self: pointer, point: pointer): void {.importc: "QCamera_setCustomFocusPoint".}
proc fcQCamera_setFocusDistance(self: pointer, d: float32): void {.importc: "QCamera_setFocusDistance".}
proc fcQCamera_focusDistance(self: pointer, ): float32 {.importc: "QCamera_focusDistance".}
proc fcQCamera_minimumZoomFactor(self: pointer, ): float32 {.importc: "QCamera_minimumZoomFactor".}
proc fcQCamera_maximumZoomFactor(self: pointer, ): float32 {.importc: "QCamera_maximumZoomFactor".}
proc fcQCamera_zoomFactor(self: pointer, ): float32 {.importc: "QCamera_zoomFactor".}
proc fcQCamera_setZoomFactor(self: pointer, factor: float32): void {.importc: "QCamera_setZoomFactor".}
proc fcQCamera_flashMode(self: pointer, ): cint {.importc: "QCamera_flashMode".}
proc fcQCamera_isFlashModeSupported(self: pointer, mode: cint): bool {.importc: "QCamera_isFlashModeSupported".}
proc fcQCamera_isFlashReady(self: pointer, ): bool {.importc: "QCamera_isFlashReady".}
proc fcQCamera_torchMode(self: pointer, ): cint {.importc: "QCamera_torchMode".}
proc fcQCamera_isTorchModeSupported(self: pointer, mode: cint): bool {.importc: "QCamera_isTorchModeSupported".}
proc fcQCamera_exposureMode(self: pointer, ): cint {.importc: "QCamera_exposureMode".}
proc fcQCamera_isExposureModeSupported(self: pointer, mode: cint): bool {.importc: "QCamera_isExposureModeSupported".}
proc fcQCamera_exposureCompensation(self: pointer, ): float32 {.importc: "QCamera_exposureCompensation".}
proc fcQCamera_isoSensitivity(self: pointer, ): cint {.importc: "QCamera_isoSensitivity".}
proc fcQCamera_manualIsoSensitivity(self: pointer, ): cint {.importc: "QCamera_manualIsoSensitivity".}
proc fcQCamera_exposureTime(self: pointer, ): float32 {.importc: "QCamera_exposureTime".}
proc fcQCamera_manualExposureTime(self: pointer, ): float32 {.importc: "QCamera_manualExposureTime".}
proc fcQCamera_minimumIsoSensitivity(self: pointer, ): cint {.importc: "QCamera_minimumIsoSensitivity".}
proc fcQCamera_maximumIsoSensitivity(self: pointer, ): cint {.importc: "QCamera_maximumIsoSensitivity".}
proc fcQCamera_minimumExposureTime(self: pointer, ): float32 {.importc: "QCamera_minimumExposureTime".}
proc fcQCamera_maximumExposureTime(self: pointer, ): float32 {.importc: "QCamera_maximumExposureTime".}
proc fcQCamera_whiteBalanceMode(self: pointer, ): cint {.importc: "QCamera_whiteBalanceMode".}
proc fcQCamera_isWhiteBalanceModeSupported(self: pointer, mode: cint): bool {.importc: "QCamera_isWhiteBalanceModeSupported".}
proc fcQCamera_colorTemperature(self: pointer, ): cint {.importc: "QCamera_colorTemperature".}
proc fcQCamera_setActive(self: pointer, active: bool): void {.importc: "QCamera_setActive".}
proc fcQCamera_start(self: pointer, ): void {.importc: "QCamera_start".}
proc fcQCamera_stop(self: pointer, ): void {.importc: "QCamera_stop".}
proc fcQCamera_zoomTo(self: pointer, zoom: float32, rate: float32): void {.importc: "QCamera_zoomTo".}
proc fcQCamera_setFlashMode(self: pointer, mode: cint): void {.importc: "QCamera_setFlashMode".}
proc fcQCamera_setTorchMode(self: pointer, mode: cint): void {.importc: "QCamera_setTorchMode".}
proc fcQCamera_setExposureMode(self: pointer, mode: cint): void {.importc: "QCamera_setExposureMode".}
proc fcQCamera_setExposureCompensation(self: pointer, ev: float32): void {.importc: "QCamera_setExposureCompensation".}
proc fcQCamera_setManualIsoSensitivity(self: pointer, iso: cint): void {.importc: "QCamera_setManualIsoSensitivity".}
proc fcQCamera_setAutoIsoSensitivity(self: pointer, ): void {.importc: "QCamera_setAutoIsoSensitivity".}
proc fcQCamera_setManualExposureTime(self: pointer, seconds: float32): void {.importc: "QCamera_setManualExposureTime".}
proc fcQCamera_setAutoExposureTime(self: pointer, ): void {.importc: "QCamera_setAutoExposureTime".}
proc fcQCamera_setWhiteBalanceMode(self: pointer, mode: cint): void {.importc: "QCamera_setWhiteBalanceMode".}
proc fcQCamera_setColorTemperature(self: pointer, colorTemperature: cint): void {.importc: "QCamera_setColorTemperature".}
proc fcQCamera_activeChanged(self: pointer, param1: bool): void {.importc: "QCamera_activeChanged".}
proc fQCamera_connect_activeChanged(self: pointer, slot: int) {.importc: "QCamera_connect_activeChanged".}
proc fcQCamera_errorChanged(self: pointer, ): void {.importc: "QCamera_errorChanged".}
proc fQCamera_connect_errorChanged(self: pointer, slot: int) {.importc: "QCamera_connect_errorChanged".}
proc fcQCamera_errorOccurred(self: pointer, error: cint, errorString: struct_miqt_string): void {.importc: "QCamera_errorOccurred".}
proc fQCamera_connect_errorOccurred(self: pointer, slot: int) {.importc: "QCamera_connect_errorOccurred".}
proc fcQCamera_cameraDeviceChanged(self: pointer, ): void {.importc: "QCamera_cameraDeviceChanged".}
proc fQCamera_connect_cameraDeviceChanged(self: pointer, slot: int) {.importc: "QCamera_connect_cameraDeviceChanged".}
proc fcQCamera_cameraFormatChanged(self: pointer, ): void {.importc: "QCamera_cameraFormatChanged".}
proc fQCamera_connect_cameraFormatChanged(self: pointer, slot: int) {.importc: "QCamera_connect_cameraFormatChanged".}
proc fcQCamera_supportedFeaturesChanged(self: pointer, ): void {.importc: "QCamera_supportedFeaturesChanged".}
proc fQCamera_connect_supportedFeaturesChanged(self: pointer, slot: int) {.importc: "QCamera_connect_supportedFeaturesChanged".}
proc fcQCamera_focusModeChanged(self: pointer, ): void {.importc: "QCamera_focusModeChanged".}
proc fQCamera_connect_focusModeChanged(self: pointer, slot: int) {.importc: "QCamera_connect_focusModeChanged".}
proc fcQCamera_zoomFactorChanged(self: pointer, param1: float32): void {.importc: "QCamera_zoomFactorChanged".}
proc fQCamera_connect_zoomFactorChanged(self: pointer, slot: int) {.importc: "QCamera_connect_zoomFactorChanged".}
proc fcQCamera_minimumZoomFactorChanged(self: pointer, param1: float32): void {.importc: "QCamera_minimumZoomFactorChanged".}
proc fQCamera_connect_minimumZoomFactorChanged(self: pointer, slot: int) {.importc: "QCamera_connect_minimumZoomFactorChanged".}
proc fcQCamera_maximumZoomFactorChanged(self: pointer, param1: float32): void {.importc: "QCamera_maximumZoomFactorChanged".}
proc fQCamera_connect_maximumZoomFactorChanged(self: pointer, slot: int) {.importc: "QCamera_connect_maximumZoomFactorChanged".}
proc fcQCamera_focusDistanceChanged(self: pointer, param1: float32): void {.importc: "QCamera_focusDistanceChanged".}
proc fQCamera_connect_focusDistanceChanged(self: pointer, slot: int) {.importc: "QCamera_connect_focusDistanceChanged".}
proc fcQCamera_focusPointChanged(self: pointer, ): void {.importc: "QCamera_focusPointChanged".}
proc fQCamera_connect_focusPointChanged(self: pointer, slot: int) {.importc: "QCamera_connect_focusPointChanged".}
proc fcQCamera_customFocusPointChanged(self: pointer, ): void {.importc: "QCamera_customFocusPointChanged".}
proc fQCamera_connect_customFocusPointChanged(self: pointer, slot: int) {.importc: "QCamera_connect_customFocusPointChanged".}
proc fcQCamera_flashReady(self: pointer, param1: bool): void {.importc: "QCamera_flashReady".}
proc fQCamera_connect_flashReady(self: pointer, slot: int) {.importc: "QCamera_connect_flashReady".}
proc fcQCamera_flashModeChanged(self: pointer, ): void {.importc: "QCamera_flashModeChanged".}
proc fQCamera_connect_flashModeChanged(self: pointer, slot: int) {.importc: "QCamera_connect_flashModeChanged".}
proc fcQCamera_torchModeChanged(self: pointer, ): void {.importc: "QCamera_torchModeChanged".}
proc fQCamera_connect_torchModeChanged(self: pointer, slot: int) {.importc: "QCamera_connect_torchModeChanged".}
proc fcQCamera_exposureTimeChanged(self: pointer, speed: float32): void {.importc: "QCamera_exposureTimeChanged".}
proc fQCamera_connect_exposureTimeChanged(self: pointer, slot: int) {.importc: "QCamera_connect_exposureTimeChanged".}
proc fcQCamera_manualExposureTimeChanged(self: pointer, speed: float32): void {.importc: "QCamera_manualExposureTimeChanged".}
proc fQCamera_connect_manualExposureTimeChanged(self: pointer, slot: int) {.importc: "QCamera_connect_manualExposureTimeChanged".}
proc fcQCamera_isoSensitivityChanged(self: pointer, param1: cint): void {.importc: "QCamera_isoSensitivityChanged".}
proc fQCamera_connect_isoSensitivityChanged(self: pointer, slot: int) {.importc: "QCamera_connect_isoSensitivityChanged".}
proc fcQCamera_manualIsoSensitivityChanged(self: pointer, param1: cint): void {.importc: "QCamera_manualIsoSensitivityChanged".}
proc fQCamera_connect_manualIsoSensitivityChanged(self: pointer, slot: int) {.importc: "QCamera_connect_manualIsoSensitivityChanged".}
proc fcQCamera_exposureCompensationChanged(self: pointer, param1: float32): void {.importc: "QCamera_exposureCompensationChanged".}
proc fQCamera_connect_exposureCompensationChanged(self: pointer, slot: int) {.importc: "QCamera_connect_exposureCompensationChanged".}
proc fcQCamera_exposureModeChanged(self: pointer, ): void {.importc: "QCamera_exposureModeChanged".}
proc fQCamera_connect_exposureModeChanged(self: pointer, slot: int) {.importc: "QCamera_connect_exposureModeChanged".}
proc fcQCamera_whiteBalanceModeChanged(self: pointer, ): void {.importc: "QCamera_whiteBalanceModeChanged".}
proc fQCamera_connect_whiteBalanceModeChanged(self: pointer, slot: int) {.importc: "QCamera_connect_whiteBalanceModeChanged".}
proc fcQCamera_colorTemperatureChanged(self: pointer, ): void {.importc: "QCamera_colorTemperatureChanged".}
proc fQCamera_connect_colorTemperatureChanged(self: pointer, slot: int) {.importc: "QCamera_connect_colorTemperatureChanged".}
proc fcQCamera_brightnessChanged(self: pointer, ): void {.importc: "QCamera_brightnessChanged".}
